--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "next start"
   },
@@ -12,10 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^0.2.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^6.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   }
 }
