--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "presentation": "reveal-md ./presentation/index.md"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "reveal-md": "^2.0.7"
   }
 }
